# Coding-Agent

./: .env copy  Dockerfile  README.md  Token.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: README.md
docs/: API.md  ARCHITECTURE.txt  DEPLOYMENT.md  GUARDRAILS.md  KNOWLEDGE_GRAPH.md  MONITORING.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_ENHANCEMENTS.md  SANDBOX.md  SETUP_GUIDE.md  USAGE_GUIDE.md  db.txt  start_production.sh
src/: main.py
src/core/agent/: graph.py  state.py
src/core/logic/: llm.py
src/core/tools/: filesystem.py  sandbox.py  search.py  terminal.py
src/infrastructure/observability/: metrics.py  tracing.py
src/infrastructure/persistence/: postgres.py
src/infrastructure/rag/: vector_store.py
src/infrastructure/sandbox/: docker_manager.py
src/infrastructure/security/: guardrails.py
src/interfaces/api/: main.py
src/interfaces/cli/: main.py
src/interfaces/ui/: app.py
